--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
             </div>
             <h3>INTERN</h3>
             <p class="lead">
-                <p>SPEAK - ENGLISH, KANNADA, HINDI</p>
-                <p>READ & WRITE - ENGLISH, KANNADA</p>
+                <p><span style="color:black">SPEAK</span> - ENGLISH, KANNADA, HINDI</p>
+
+                <p><span style="color:black">READ & WRITE</span> - ENGLISH, KANNADA</p>
         </div>
 
         </div>
@@ -250,8 +251,8 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Location</h4>
                     <p class="lead mb-0">
-                        KALMESHWAR TEMPLE ROAD NAGANUR,
-                        <br /> NAVALGUND - 582208
+                        BTM LAYOUT
+                        <br /> BENGALURU, 560068
                     </p>
                 </div>
 
