--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
 
             </div>
-            <h3>INTERN</h3>
+            <h3>LANGUAGE</h3>
             <p class="lead">
                 <p><span style="color:black">SPEAK</span> - ENGLISH, KANNADA, HINDI</p>
 
