--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 <div style="color: black;">
                     <h3>CERTIFICATION</h3>
                     <p class="lead">
-                        <h5>Master certification in python full stack development.</h5>
+                        <h5>Master certification in python full stack developer.</h5>
                         <p>Issuing organization: I .T .VEDANT.</p>
-                        <h5>Python for web development.</h5>
-                        <p>Issuing organization: provided by IBMCEP.</p>
+                        <h5>Python web developer.</h5>
+                        <p>Issuing organization: provided by IBM.</p>
                     </p>
                     <hr>
                 </div>
